syntax = "proto3";

package mercari.go_conference_2021_spring_office_hour.balance;

option go_package = "github.com/mercari/go-conference-2021-spring-office-hour/services/balance/proto";

service BalanceService {
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
}

message GetBalanceRequest {}

message GetBalanceResponse {}
